# scrcpy-mobile

./: .gitignore  .gitmodules
.github/workflows/: build-ipa.yml  build-main-ipa.yml
porting/: Makefile
porting/cmake/: CMakeLists.txt  CMakeLists.vncserver.txt
porting/include/: scrcpy-porting.h
porting/libs/include/: adb_public.h
porting/libs/xcframeworks/libswresample.xcframework/: Info.plist
porting/libtsnet/: Makefile  README.md
porting/libtsnet/cmd/: README-C-TEST.md  demo.sh  main.c
porting/libtsnet/cmd/c-binding/: main.go
porting/libtsnet/cmd/ip-reuse-test/: README.md  main.go  test_ip_reuse.sh
porting/libtsnet/cmd/main/: main.go
porting/libtsnet/lib/: oauth_client.go  tsnet_forwarder.go  tsnet_forwarder.h
porting/scripts/: defines.sh  make-ffmpeg.sh  make-libsdl.sh  make-scrcpy.sh  make-vncclient.sh  server-diff.sh
porting/server/src/main/java/com/genymobile/scrcpy/: FakeContext.java  (+1 more)
porting/src/: audio_player-porting.c  audio_regulator-porting.c  controller-porting.c  decoder-porting.c  demuxer-porting.c  display-porting.c  process-porting.cpp  process-porting.hpp  scrcpy-porting.c  screen-porting.c
scrcpy-app/: .gitignore  Makefile  Scrcpy-Remote-Info.plist
scrcpy-app/ADBClient/: ADBClient.h  ADBClient.m  ADBClient_cli.h  ADBMediaDetector.h  ADBMediaDetector.m  Makefile  README.md  SDLUIKitDelegate+Extend.m  SDL_uikitviewcontroller+Extend.h  SDL_uikitviewcontroller+Extend.m  ScrcpyADBClient.h  ScrcpyADBClient.m  ScrcpyMenuMaskView.h  ScrcpyMenuMaskView.m  ScrcpyMenuView.m  ScrcpyMetalView.h  ScrcpyMetalView.m  ScrcpyRuntime.h  ScrcpyRuntime.m  scrcpy-server
scrcpy-app/LatencyTest/: ADBLatencyTester.h  ADBLatencyTester.m  Makefile  README.md  TCPLatencyTester.h  TCPLatencyTester.m  tcp-latency-tester  tcp-latency-tester-cli.m
scrcpy-app/Scrcpy Remote/: ActionConfirmationPresenter.swift  ActionCreationComponents.swift  ActionCreationFlow.swift  ActionCreationSteps.swift  ActionsView.swift  AppLogManager.swift  AppSchemeManagerV2.swift  ConnectionStatusView.swift  Launch Screen.storyboard  LiveActivityDebugView.swift  MainContentView.swift  PIPDebugView.swift  PIPManager.swift  SDLUIKitDelegate+Extend.h  SDLUIKitDelegate+Extend.m  SDL_uikitviewcontroller+Extend.h  SDL_uikitviewcontroller+Extend.m  ScrcpyActionsBridge.h  ScrcpyActionsBridge.m  ScrcpyActionsTableViewController.h  ScrcpyActionsTableViewController.m  ScrcpyCommon.h  ScrcpyCommon.m  ScrcpyConstants.h  ScrcpyConstants.m  ScrcpyDumpUIView.swift  ScrcpyInputMaskView.h  ScrcpyInputMaskView.m  ScrcpyLiveActivity.swift  ScrcpyLiveActivityManager.swift  ScrcpyMenuView+Actions.h  ScrcpyMenuView+Actions.m  ScrcpyMenuView+FileTransfer.h  ScrcpyMenuView+FileTransfer.m  ScrcpyMenuView+Private.h  ScrcpyMenuView+VNCGestures.h  ScrcpyMenuView+VNCGestures.m  ScrcpyMenuView.h  ScrcpyMenuView.m  ScrcpyModifierState.h  (+11 more)
scrcpy-app/Scrcpy Remote Tests/: Scrcpy_Remote_Tests.swift
scrcpy-app/Scrcpy Remote.xcodeproj/: project.pbxproj
scrcpy-app/Scrcpy Remote.xcodeproj/project.xcworkspace/xcuserdata/ethan.xcuserdatad/: UserInterfaceState.xcuserstate
scrcpy-app/Scrcpy Remote.xcodeproj/xcshareddata/xcschemes/: Scrcpy Remote.xcscheme
scrcpy-app/Scrcpy Remote.xcodeproj/xcuserdata/ethan.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
scrcpy-app/Scrcpy Remote.xcodeproj/xcuserdata/ethan.xcuserdatad/xcschemes/: xcschememanagement.plist
scrcpy-app/Scrcpy Remote/Assets.xcassets/adb-background.imageset/: Contents.json
scrcpy-app/Scrcpy Remote/Assets.xcassets/android-large.imageset/: Contents.json
scrcpy-app/Scrcpy Remote/Assets.xcassets/android.imageset/: Contents.json
scrcpy-app/Scrcpy Remote/Assets.xcassets/vnc-background.imageset/: Contents.json
scrcpy-app/Scrcpy Remote/Assets.xcassets/vnc-large.imageset/: Contents.json
scrcpy-app/Scrcpy Remote/Assets.xcassets/vnc.imageset/: Contents.json
scrcpy-app/Scrcpy Remote/en.lproj/: Localizable.strings
scrcpy-app/Scrcpy Remote/ja.lproj/: Localizable.strings
scrcpy-app/Scrcpy Remote/ko.lproj/: Localizable.strings
scrcpy-app/Scrcpy Remote/zh-Hans.lproj/: Localizable.strings
scrcpy-app/Scrcpy SDL/: Scrcpy Remote-Bridging-Header.h  ScrcpyBlockWrapper.h  ScrcpyBlockWrapper.m  ScrcpyClientWrapper.h  ScrcpyClientWrapper.m
scrcpy-app/ScrcpyLiveActivityWidget/: ScrcpyLiveActivityAttributes.swift  ScrcpyLiveActivityWidgetBundle.swift  ScrcpyLiveActivityWidgetLiveActivity.swift  ScrcpyStatus.swift
scrcpy-app/ScrcpyLiveActivityWidget/Assets.xcassets/AppIcon_live.imageset/: Contents.json
scrcpy-app/VNCClient/: RenderRegionCalculator.h  ScrcpyCommonRuntime.m  ScrcpyVNCAudioPlayer.h  ScrcpyVNCAudioPlayer.m  ScrcpyVNCClient+MouseControl.m  ScrcpyVNCClient.h  ScrcpyVNCClient.m  ScrcpyVNCRuntime.h  ScrcpyVNCRuntime.m  TestCursorPos.m
scrcpy-app/VNCClient_legacy/: CursorPosManager.h  CursorPosManager.m  Makefile  RenderRegionCalculator.m  ScrcpyVNCClient+MouseControl.h  ScrcpyVNCClient+MouseControl.m  ScrcpyVNCClient+Private.h  ScrcpyVNCClient.m  TestCursorPos
scrcpy-ios/scrcpy-ios/: SDL_uikitviewcontroller+Extend.m
scrcpy-ios/scrcpy-ios/en.lproj/: Localizable.strings
(+15 files in other folders)
